<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intelligent Consultation Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">Intelligent Consultation Assistant</string>
    <string name="title_activity_initialization">Initialization</string>
    <string name="title_activity_zone_choice">Zone Choice</string>
    <string name="title_activity_register_patient">Register New Patient</string>
    <string name="title_activity_show_new_patient">New Patient Information</string>
    <string name="title_activity_new_patient">New Patient Data</string>
    <string name="title_activity_done_register_patient">Patient Created Correctly</string>
    <string name="addPatient">Press button to add a new patient into system</string>
    <string name="createNewPatient">Create New Patient</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth">Date of Bitrh</string>
    <string name="village">Village</string>
    <string name="gender">Gender</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="invalidFirstName">Error: please enter a valid First Name</string>
    <string name="invalidFamilyName">Error: please enter a valid Family Name</string>
    <string name="invalidDate">Error: please enter a valid Date</string>
    <string name="invalidVillage">Error: please enter a valid Village</string>
    <string name="confirm">Confirm</string>
    <string name="modify">Modify</string>
    <string name="patientCreated">This patient has been created correctly</string>
    <string name="goBack">Return</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mainMenu">Main Menu</string>
    <string name="welcome">Welcome</string>
    <string name="initialization_description">This assistant will guide you through the initialization of the application</string>
    <string name="new_center">New Center</string>
    <string name="restore_center">Restore Center</string>
    <string name="accessibility_horizontal_bar">Horizontal Bar</string>
    <string name="initialization_selectcenterlocation">Please select the treatment center\'s location</string>
    <string name="select_location">Select Location</string>
    <string name="selected_location">Selected Location:</string>
    <string name="none">None</string>
    <string name="select">Select</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password (Repeated)</string>
    <string name="setup_center">Setup Center</string>
    <string name="fullname_default">User</string>
    <string name="initialization_enteradmindetails">Please enter your administator account\'s details</string>
    <string name="databaseError">Error in access to Database</string>
    <string name="error_impossible_create_user">Error: Impossible to create a new user!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="login_description">Please login with your account</string>
    <string name="error_invalid_login">Error: Invalid login credentials</string>
    <string name="error_empty_fullname">Error: Empty full name</string>
    <string name="error_empty_password">Error: Empty password</string>
    <string name="error_empty_location">Error: You did not choose a location</string>
    <string name="error_different_passwords">Error: The two passwords are different</string>
    <string name="select_village">Press to select a Village</string>
    <string name="zone">Zone</string>
    <string name="title_activity_search_patient">Introduce Data of Patient</string>
    <string name="title_activity_found_patients">List of Patients</string>
    <string name="introDate">Introduce Date of Birth</string>
    <string name="searchPatient">Search Patient</string>
    <string name="noPatientsFound">Any patient found with parameters of search</string>
    <string name="title_activity_info_patient">Patient Information</string>
    <string name="rememberme">Remember me</string>
    <string name="manage_users">Manage Users</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>
    <string name="add_user">Add User</string>
    <string name="current_center_users">Current Center Users</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="edituser_description">Use this form to add or edit the selected user</string>
    <string name="is_admin">Administrator?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edituser_title">Edit User</string>
    <string name="edituser_title_add">Add User</string>
    <string name="edituser_description_add">Use this form to add a new user</string>
    <string name="descr_image">Picture of patient</string>
    <string name="space"></string>
    <string name="new_diagnostic">New Diagnostic</string>
    <string name="last_diagnostic">Last Diagnostic</string>
    <string name="title_activity_get_signs">Getting Signs</string>
    <string name="next">Next</string>
    <string name="pressGender">Error: please select a value for gender</string>
    <string name="allQuestionsMarked">Error: All questions must be marked</string>
    <string name="title_activity_signs_classification">SignsClassificationActivity</string>
    <string name="signsclassification_title">Results</string>
    <string name="logout">Logout</string>
    <string name="error_no_diagnostic_data">Error: No diagnostics data for this child (weight height etc). Some results may be wrong.</string>
    <string name="genderBirth">Gender and Birth</string>
    <string name="last_measures">Last Measures</string>
    <string name="weight">Weight (kg): </string>
    <string name="height">Height (cm):</string>
    <string name="temperature">Temperature (ºC):</string>
    <string name="muac">Muac (mm):</string>
    <string name="noDiagnostic">This patient doesn\'t have any diagnostic.</string>
    <string name="title_activity_show_diagnostic">Diagnostic</string>
    <string name="measures">Measures</string>
    <string name="illness">Illness</string>
    <string name="classification">Classification</string>
    <string name="date">Date</string>
    <string name="question">Question</string>
    <string name="introData">Introduce Data</string>
    <string name="checkData">Check Data</string>
    <string name="invalidNumbers">Error: please insert valid numbers</string>
        
</resources>