<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    	<EditText
    	    android:id="@+id/edit_first_name"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" >
	        
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/last_name"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />

    	<EditText
    	    android:id="@+id/edit_last_name"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textPersonName" />

	    <TextView
    	    android:id="@+id/textView3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/gender"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:checked="true"
	            android:text="@string/male" />

	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/female" />

	    </RadioGroup>

	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/birth"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <DatePicker
	        android:id="@+id/datePicker1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />

	    <TextView
    	    android:id="@+id/textView6"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/village"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/edit_village"
    	    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="text" />

	    <LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/accept"
	            android:onClick="sendInfo" />
	
    	    <Button
    	        android:id="@+id/button2"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
        	    android:text="@string/cancel"
        	    android:onClick="cancel" />
	
	    </LinearLayout>

	</LinearLayout>

</ScrollView>
